<resources>
    <string name="app_name">YouTube Project</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username_error_message">Username must contain at least 5 characters, at least 1 letter, and at least 1 number</string>
    <string name="nickname_error_message">NickName must Contain at least 1 character and only english letters and numbers</string>
    <string name="password_error_message">Password must contain at least 8 characters, at least 1 letter, and at least 1 number</string>
    <string name="confirm_password_error_message">Passwords do not match</string>
    <string name="user_registered_successfully">User registered successfully</string>
    <string name="username_exists_error_message">Username already exists</string>
    <string name="login_user">Login</string> <!-- Add this line -->
  <string name="enter_username_min_5_chars_1_number">Username </string>
    <string name="orDivider">Or</string>
    <string name="userNameField">Enter your username</string>
    <string name="verifycodebutton">verifyCodeButton</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify_code">Verify Code</string>
   <string name="youtube_button_description">YouTube Button</string>

</resources>